changed name of package

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "beautiful-vcard",
+    "name": "portfolio-dev",
     "version": "0.1.0",
     "homepage": "https://beingtmk.github.io/portfolio",
     "private": true,
