--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
     "name": "portfolio-dev",
     "version": "0.1.0",
-    "homepage": "https://beingtmk.github.io/portfolio",
+    "homepage": "https://beingtmk.github.io/portfolio-dev",
     "private": true,
     "dependencies": {
         "react": "^16.8.4",
