--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
     "name": "portfolio-dev",
     "version": "0.1.0",
-    "homepage": "https://beingtmk.github.io/portfolio-dev",
+    "homepage": "https://beingtmk.github.io",
     "private": true,
     "dependencies": {
         "react": "^16.8.4",
@@ -14,8 +14,8 @@
         "build": "react-scripts build",
         "test": "react-scripts test",
         "eject": "react-scripts eject",
-        "predeploy": "npm run build",
-        "deploy": "gh-pages -d build"
+        "predeploy": "yarn run build",
+        "deploy": "gh-pages -b master -d build"
     },
     "eslintConfig": {
         "extends": "react-app"
